# pro-se-cg

./: .gitignore  .gitmodules  Makefile  README.md  references.bib.bak  report.aux  report.bbl  report.blg  report.dvi  report.run.xml  report.tex  report.tex.bak  report.toc
code/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  dna.txt  raycastCompute.shbin  run.bat  run.sh  run_debug.bat
code/data/config/: settings.json
code/data/geometry/: test_scene.blend  test_scene.blend1  test_scene.mtl
code/data/shader/: Blit.fsh  CommonDeferredFrag.glsl  CommonDeferredVert.glsl  CommonTransparentFrag.glsl  DeferredCombine.fsh  DeferredCombine.vsh  ImGui.fsh  ImGui.vsh  Lighting.glsl  MotionVectors.fsh  MotionVectors.vsh  PBR.fsh  PBR.vsh  PassBlit.fsh  ShadowMap.fsh  ShadowMap.vsh  TXAA.fsh  Utils.glsl
code/data/shader/Bloom/: Blit.fsh  Blur.fsh  Extract.fsh  Extract.vsh
code/data/shader/compute/: CopyPrimitive.csh  MergePrimitive.csh  PrimitiveCommon.glsl  Random.glsl  RaycastCompute.csh  SortPrimitive.csh
code/data/shader/setup/: geometry.glsl  tesselation.glsl  vertex.glsl
code/data/shader/ssao/: SSAOBlur.fsh  SSAOCompute.fsh
code/src/runtime/: CMakeLists.txt
code/src/runtime/include/engine/audio/: AudioSystem.hpp  MidiControlEvent.hpp  MidiNoteEvent.hpp  MidiPitchBendEvent.hpp  MidiSystem.hpp  ModSystem.hpp  OscEvent.hpp  OscSystem.hpp  OscToMidiSystem.hpp  RawMidiEvent.hpp  Sound.hpp  SoundSource.hpp
code/src/runtime/include/engine/core/: Context.hpp  GameLoopSystem.hpp  PlatformMacros.hpp  ProfilerSystem.hpp  SettingsSystem.hpp  SimulateEvent.hpp  System.hpp  WindowSystem.hpp
code/src/runtime/include/engine/events/: ControllerEvent.hpp  DrawEvent.hpp  Event.hpp  EventSystem.hpp  JoystickEvent.hpp  KeyboardEvent.hpp  MouseEvent.hpp  PrepareDrawEvent.hpp  ResizeWindowEvent.hpp  SDLEvent.hpp  TouchEvent.hpp  WindowEvent.hpp
code/src/runtime/include/engine/graphics/: BloomPostFX.hpp  Camera.hpp  DrawCall.hpp  Geometry.hpp  Light.hpp  Material.hpp  PostFX.hpp  RenderQueue.hpp  RendererSystem.hpp
code/src/runtime/include/engine/memory/: Allocator.hpp  FallbackAllocator.hpp  GlobalStackAllocator.hpp  LocalStackAllocator.hpp  Pool.hpp  PoolAllocator.hpp
code/src/runtime/include/engine/scene/: Drawable.hpp  Entity.hpp  Scene.hpp  SceneGraphSystem.hpp  Transform.hpp
code/src/runtime/include/engine/ui/: UISystem.hpp  imconfig.h  imgui.h  imgui_internal.h
code/src/runtime/include/engine/utils/: Remotery.h  Stack.hpp  StringHash.hpp  oscpkt.hh  stb_image_write.h  udp.hh
code/src/runtime/src/: main.cpp
code/src/runtime/src/engine/audio/: AudioSystem.cpp  MidiSystem.cpp  ModSystem.cpp  OscSystem.cpp  OscToMidiSystem.cpp  Sound.cpp  SoundSource.cpp  micromod.c
code/src/runtime/src/engine/core/: Context.cpp  GameLoopSystem.cpp  ProfilerSystem.cpp  SettingsSystem.cpp  WindowSystem.cpp
code/src/runtime/src/engine/events/: Event.cpp  EventSystem.cpp
code/src/runtime/src/engine/graphics/: BloomPostFX.cpp  RendererSystem.cpp
code/src/runtime/src/engine/memory/: Pool.cpp
code/src/runtime/src/engine/scene/: Entity.cpp  SceneGraphSystem.cpp
code/src/runtime/src/engine/ui/: UISystem.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp
code/src/runtime/src/engine/utils/: Remotery.c  stb_image.cpp  stb_image_write.cpp
code/src/tools/ln-vis/: ln-vis.go
report/: ACGSeminar.cls  Makefile  out.pdf_tex  references.bib  report-autopp-blx.bib  report.exp.gnuplot  report.ps  report.sin.gnuplot  report.tex  report.x.gnuplot  tmp.inputs
report/figures/: BSP_trees.tex  bvh.tex  full_txaa.webm  kd-tree.tex  light-path.sk  light-path.tex  no_rejection.webm  no_reprojection.webm  path.emf
